--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
+  display: flex;
+  flex-direction: column;
 }
 body{
   background-color: aliceblue;
