--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -76,3 +82,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
