--- a/src/index.css
+++ b/src/index.css
@@ -71,10 +71,21 @@ button:focus-visible {
 button.rs-dropdown-toggle.rs-btn.rs-btn-default{
   background-color:#fff;
   border: 1px solid #e5e5ea;
+
 }
 h1{
   font-size: 2rem;
 }
+#menubutton{
+  padding-left: 110px;
+}
+.header{
+  margin-bottom: 20px;
+}
+
+
+
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
