--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,14 @@
   -webkit-text-size-adjust: 100%;
 }
 #root {
+  min-height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   display: flex;
   flex-direction: column;
+  flex-direction: column;
+  align-items: center;
 }
 body{
   background-color: aliceblue;
@@ -28,9 +31,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
+
 
 body {
   margin: 0;
@@ -68,6 +69,7 @@ button:focus-visible {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  width: 100%;
 }
 button.rs-dropdown-toggle.rs-btn.rs-btn-default{
   background-color:#fff;
