--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,40 @@ h1{
 }
 
 
+.numberBox{
+  padding: 10px 20px;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 10px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  min-width: 150px;
+  margin: 5px;
+}
+.numberBoxHead{
 
+}
+.numberBoxContent{
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 2rem;
+  display: flex;
+  align-items: center;
+}
+.arrowIcon{
+  height: 1rem;
+}
+.numberBoxFooter{
+  font-size: 0.6rem;
+}
+
+.gridBox{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
 
 
 
