Set monthly values and add loading spinner.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -119,6 +119,16 @@ h1{
   grid-template-rows: 1fr 1fr;
 }
 
+.dna-wrapper{
+
+  position: absolute;
+  position: absolute;
+    top: 50%;  /* position the top  edge of the element at the middle of the parent */
+    left: 50%; /* position the left edge of the element at the middle of the parent */
+
+    transform: translate(-50%, -50%);
+}
+
 
 
 
